# python_grpc_test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
client/: main.py
protobuf/src/: helloworld.proto
scripts/: client.py  protogen.sh  server.py
server/: grpc_server.py  main.py  rest_server.py
